--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,30 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:orientation="vertical"
+    android:background="#ff90a9ee"
     tools:context=".MainActivity">
+
+    <me.ghoscher.button.Ripple
+        app:rippleRadius="50%"
+        app:viewColor="#ff90a9ee"
+        android:layout_margin="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="80dp" />
+
+    <me.ghoscher.button.Ripple
+        app:rippleRadius="200%"
+        app:viewColor="#ffee2a00"
+        android:layout_width="match_parent"
+        android:layout_height="80dp" />
 
     <me.ghoscher.button.Ripple
         app:rippleRadius="200%"
         app:viewColor="#ff77ee67"
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp" />
 
-</FrameLayout>
+</LinearLayout>
